Correction syntax error import.sql file.