@@ -44,16 +44,19 @@ public class LogUtils {
         return (StringUtils.isEmpty(header)) ? UUID.randomUUID().toString() : header;
     }
 
-    public static void java() {
-        List list = List.of(2);
-
-        Integer[] sourceArray = { 0, 1, 2, 3, 4, 5 };
-        List<Integer> targetList = Arrays.asList(sourceArray);
-        targetList = targetList.stream().collect(Collectors.toList());
-
-        Optional.of(targetList);
-        int six = Integer.valueOf(targetList.get(0));
-    }
-
-
+//    public static void java() {
+//        List list = List.of(2);
+//
+//        Integer[] sourceArray = { 0, 1, 2, 3, 4, 5 };
+//        List<Integer> targetList = Arrays.asList(sourceArray);
+//        targetList = targetList.stream().collect(Collectors.toList());
+//        s.toCharArray()
+//
+//        Optional.of(targetList);
+//        int six = Integer.valueOf(targetList.get(0));
+//
+//        String s = new "v";
+//        s.toCharArray();
+//        System.out.println("");
+//    }
 }
